--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html> <html lang=en-US style><!--
- Page saved with SingleFile 
- url: http://www.manhealthyhelp.com/111/ 
- saved date: Tue Nov 17 2020 19:02:12 GMT+0800 (中国标准时间)
+ f7UL2!PjQOZS$hOta351vVu%
 --><meta charset=utf-8>
 <title>India: New Policy Could Save Your Family Thousands – Your Money Saving</title>
 <link rel=alternate type=application/rss+xml title="Your Money Saving » Feed" href=http://www.yourmoneysaving.co.uk/feed/>
